All works as expected alhamdullilah

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@fontsource/poppins": "^5.0.14",
     "aos": "^2.3.4",
     "next": "14.2.4",
